--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -74,4 +74,8 @@ input, textarea {
     .container.contact__container {
         width: var(--container-width-sm);
     }
+    
+    .contact__options {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
