--- a/src/index.css
+++ b/src/index.css
@@ -78,14 +78,14 @@ section > h2{
     color: var(--color-light);
 }
 
-a{
+/* a{
     color: var(--color-primary);
     transition: var(--transition);
 }
 
 a:hover{
     color: var(--color-white);
-}
+} */
 
 a:link {
     text-decoration: none;
