--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -2,6 +2,15 @@
     width: 48%;
 }
 
+.container_experience {
+    max-width: 80%;
+    margin: 0 auto;
+
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+}
+
 .experience__container > div {
     background: var(--color-bg-variant);
     padding: 2.4rem 5rem;
@@ -55,6 +64,12 @@
     .experience__content {
         padding: 1rem;
     }
+
+    .container_experience {
+        flex-direction: column;
+        max-width: 98%;
+    }
+    
 }
 
 /* =========== MEDIA QUERIES (SMALL DEVICES) =========== */
