--- a/src/components/portfolio/components/card/card.css
+++ b/src/components/portfolio/components/card/card.css
@@ -25,3 +25,34 @@
     gap: 1rem;
     margin-bottom: 1rem;
 }
+
+.card_stacks {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.9rem;
+    justify-content: flex-start;
+
+    margin-top: -1.5rem;
+    margin-bottom: 2rem;
+}
+
+.stack {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 0.5rem;
+
+    text-align: center;
+
+    background: var(--color-primary);
+    padding: 2px 8px 2px 10px;
+    border-radius: 0.5rem;
+}
+
+.stack img {
+    width: 2rem;
+}
+
+.stack p {
+    color: var(--color-bg);
+}
