--- a/src/components/portfolio/components/card/card.css
+++ b/src/components/portfolio/components/card/card.css
@@ -42,15 +42,20 @@
     flex-direction: row;
     gap: 0.5rem;
 
-    text-align: center;
-
     background: var(--color-primary);
-    padding: 2px 8px 2px 10px;
-    border-radius: 0.5rem;
+    padding: 0.75rem 1.2rem;
+    border-radius: 0.4rem;
+    cursor: pointer;
+}
+
+.stack:hover{
+    background: var(--color-white);
+    color: var(--color-bg);
+    border-color: transparent;
 }
 
 .stack img {
-    width: 2rem;
+    width: 1.7rem;
 }
 
 .stack p {
